Fixed pinEApple header on smaller resolutions

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ div.page-bg {
 }
 
 pre {
-	font-size: 11px;
+	font-size: 1.1vh;
 	padding: 0px;
 	margin: 0px;
 	display: inline-block;
@@ -112,9 +112,9 @@ p.pizza {
 	float: center;
 	text-align: center;
 	position: relative;
-	bottom: 22%;
+	bottom: 20%;
 	left: 20%;
-	font-size: 10px;
+	font-size: 1vh;
 }
 
 iframe.youtube-embed {
